--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <i class="fa-solid fa-code"></i> Portfolio
     </div>
     <ul class="nav">
-      <li class="nav-item"><a href="Portfolio.html" class="nav-link">Home</a></li>
+      <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
       <li class="nav-item"><a href="project.html" class="nav-link">Projects</a></li>
       <li class="nav-item"><a href="contact.html" class="nav-link active">Contact</a></li>
     </ul>
@@ -74,4 +74,5 @@
   </footer>
 </body>
 </html>
+
 
