--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact - Daezy Portfolio</title>
+  <title>Luke</title>
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
   <!-- Font Awesome -->
@@ -18,7 +18,7 @@
       <i class="fa-solid fa-code"></i> Portfolio
     </div>
     <ul class="nav">
-      <li class="nav-item"><a href="Portfolio.html" class="nav-link">Home</a></li>
+      <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
       <li class="nav-item"><a href="project.html" class="nav-link">Projects</a></li>
       <li class="nav-item"><a href="contact.html" class="nav-link active">Contact</a></li>
     </ul>
@@ -91,3 +91,4 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
