--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
   <!-- ✅ Navbar -->
   <header class="navbar bg-light shadow-sm px-5 py-3 d-flex justify-content-between align-items-center">
     <div class="logo fs-4 fw-bold text-primary">
-      <i class="fa-solid fa-code"></i> Portfolio
+      <i class="fa-solid fa-code"></i> Luke
     </div>
     <ul class="nav">
       <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
