--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Daezy Portfolio</title>
+  <title>Luke</title>
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
   <!-- Font Awesome -->
@@ -16,7 +16,7 @@
   <!-- Navbar -->
   <header class="navbar bg-light shadow-sm px-5 py-3 d-flex justify-content-between align-items-center">
     <div class="logo fs-4 fw-bold text-primary">
-      <i class="fa-solid fa-code"></i> Luke
+      <i class="fa-solid fa-code"></i>
     </div>
     <ul class="nav">
       <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
