--- a/project.html
+++ b/project.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <!-- Custom CSS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
-  <link rel="stylesheet" href="style1.css">
+  <link rel="stylesheet" href="project.css">
 </head>
 <body>
   <!-- Navbar -->
@@ -45,7 +45,7 @@
         <p>A responsive portfolio website built with HTML, CSS, and JavaScript.</p>
         <p><b>Tech:</b> HTML, CSS, JS</p>
         <div class="project-links">
-          <a href="Portfolio.html" class="bttn">View Live</a>
+          <a href="index.html" class="bttn">View Live</a>
           <a href="#" class="bttn-outline"><i class="fab fa-github"></i> GitHub</a>
         </div>
       </div>
@@ -57,7 +57,7 @@
         <p>Full-stack e-commerce application with shopping cart and payment system.</p>
         <p><b>Tech:</b> React, Node.js, MongoDB</p>
         <div class="project-links">
-          <a href="test.html" class="bttn">View Live</a>
+          <a href="ecommance.html" class="bttn">View Live</a>
           <a href="#" class="bttn-outline"><i class="fab fa-github"></i> GitHub</a>
         </div>
       </div>
