--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="style1.css">
+  <link rel="stylesheet" href="contact.css">
 </head>
 <body>
   <!-- ✅ Navbar -->
