--- a/ecommance.html
+++ b/ecommance.html
@@ -19,7 +19,7 @@
 <body>
   <div class="middle">
   <!-- Navbar -->
-    <header>
+  <header>
         <div class="container">
             <div class="header-content">
                 <div class="logo">
@@ -54,9 +54,9 @@
                 </div>
             </div>
         </div>
-    </header>
+  </header>
   <!-- Hero Section -->
-  <section class="hero d-flex justify-content-center align-items-center text-center"
+<section class="hero d-flex justify-content-center align-items-center text-center"
   style="height: 70vh; 
          background: url(https://i.pinimg.com/1200x/23/20/b3/2320b3e6fb349c0a85acfbbe2efd159b.jpg) center/cover;">
   <div class="hero-content text-white">
@@ -65,53 +65,77 @@
     <button class="btn btn-light px-4 py-2 mt-3">Shop Now</button>
   </div>
 </section>
-    <!-- Featured Products -->
-    <section class="container">
-        <h2 class="section-title">Featured Products</h2>
-        <div class="products-grid">
-            <!-- Product 1 -->
-            <div class="product-card">
-                <img src="https://i.pinimg.com/736x/43/15/ae/4315ae69df9daa2550203db798b0d77f.jpg" alt="Wireless Headphones" class="product-image">
-                <div class="product-info">
-                    <h3 class="product-title">Wireless Headphones</h3>
-                    <p class="product-price">$89.99</p>
-                </div>
-            </div>
 
-            <div class="product-card">
-                <img src="https://i.pinimg.com/736x/d8/45/93/d84593f11394d5f4b0b6c6513f393a40.jpg" alt="Smart Watch" class="product-image">
-                <div class="product-info">
-                    <h3 class="product-title">Smart Watch</h3>
-                    <p class="product-price">$129.99</p>
-                </div>
-            </div>
-
-            <div class="product-card">
-                <img src="https://i.pinimg.com/1200x/54/ac/1d/54ac1d3de2ebc64496d75795a078b1a1.jpg" alt="Bluetooth Speaker" class="product-image">
-                <div class="product-info">
-                    <h3 class="product-title">Bluetooth Speaker</h3>
-                    <p class="product-price">$49.99</p>
-                </div>
-            </div>
-
-            <div class="product-card">
-                <img src="https://i.pinimg.com/1200x/70/07/d8/7007d8414b2b70c1aef7a743a53d94ac.jpg" alt="Wireless Charger" class="product-image">
-                <div class="product-info">
-                    <h3 class="product-title">Wireless Charger</h3>
-                    <p class="product-price">$29.99</p>
-                </div>
-            </div>
-
-            <div class="product-card">
-                <img src="https://i.pinimg.com/1200x/68/29/df/6829dfba10d9eb02e1e7d43df6d65c6b.jpg" alt="Wireless Charger" class="product-image">
-                <div class="product-info">
-                    <h3 class="product-title">Ear Phone</h3>
-                    <p class="product-price">$299.99</p>
-                </div>
-            </div>
+<section>
+    <div class="pinterest-grid" >
+      <div class="pin-card">
+        <img src="https://i.pinimg.com/1200x/05/17/37/0517379aac07936adf09dd63e44ef8e3.jpg" alt="ပုံ">
+        <div class="description">
+          <h3>Lenovo Think Pad</h3>
         </div>
-    </section>
-        <footer>
+      </div>
+
+      <div class="pin-card">
+        <img src="https://i.pinimg.com/736x/5c/03/77/5c03778ee53f40622ad0fbd992c601b7.jpg" alt="ပုံ">
+        <div class="description">
+          <h3>Lenovo Think Pad</h3>
+          <p></p>
+        </div>
+      </div>
+
+            <div class="pin-card">
+        <img src="https://i.pinimg.com/736x/89/b0/93/89b093ba10cc816ae722c08702acc67a.jpg" alt="ပုံ">
+        <div class="description">
+          <h3>Lenovo Think Pad</h3>
+          <p></p>
+        </div>
+      </div>
+
+            <div class="pin-card">
+        <img src="https://i.pinimg.com/1200x/37/a8/ae/37a8ae2095512429d5d0ffa5d8675378.jpg" alt="ပုံ">
+        <div class="description">
+          <h3>Lenovo Think Pad</h3>
+          <p></p>
+        </div>
+      </div>
+
+            <div class="pin-card">
+        <img src="https://i.pinimg.com/736x/b9/4a/0e/b94a0e6246ff1c019e23e3281fbb2a3c.jpg" alt="ပုံ">
+        <div class="description">
+          <h3>Lenovo Think Pad</h3>
+          <p></p>
+        </div>
+      </div>
+
+            <div class="pin-card">
+        <img src="https://i.pinimg.com/736x/bb/31/c2/bb31c26fcffdf72b62c5895e96d42b7a.jpg" alt="ပုံ">
+        <div class="description">
+          <h3>Lenovo Think Pad</h3>
+          <p></p>
+        </div>
+      </div>
+      
+      <div class="pin-card">
+        <img src="https://i.pinimg.com/736x/44/ba/07/44ba070e3ce7f45a73634342bf57191f.jpg" alt="ပုံ">
+        <div class="description">
+          <h3>Lenovo Think Pad</h3>
+          <p></p>
+        </div>
+      </div>
+
+      <div class="pin-card">
+        <img src="https://i.pinimg.com/1200x/0a/15/b1/0a15b1430208652bf32aba8cccf0c66c.jpg" alt="ပုံ">
+        <div class="description">
+          <h3>Lenovo Think Pad</h3>
+          <p></p>
+        </div>
+      </div>
+
+    <!-- အခြား card များကို ထပ်ထည့်နိုင်သည် -->
+</div>
+</section>
+
+    <footer>
         <div class="container">
             <div class="footer-content">
                 <div class="footer-column">
@@ -155,5 +179,6 @@
             </div>
         </div>
     </footer>
+    <script src="ecommance.js"></script>
 </body>
 </html>
