--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- Navbar -->
   <header class="navbar bg-light shadow-sm px-5 py-3 d-flex justify-content-between align-items-center">
     <div class="logo fs-4 fw-bold text-primary">
-      <i class="fa-solid fa-code"></i>
+      <i class="fa-solid fa-code"></i>Luke
     </div>
     <ul class="nav">
       <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
@@ -25,15 +25,17 @@
     </ul>
   </header>
   <!-- Hero Section -->
-  <section class="hero">
+  <section class="hero"
+  style="height: 60vh; 
+         background: url(https://i.pinimg.com/1200x/e8/b3/d1/e8b3d1b5ccd14597ef8a24f6655603ab.jpg) center/cover;">
   <div class="hero-content">
-    <h1>Hello, I'm <span>Daezy</span></h1>
+    <h1>Hello, I'm <span>Luke</span></h1>
     <p class="role">Frontend Developer</p>
     <p class="desc">
       I create modern, responsive websites with clean UI/UX.
     </p>
     <div class="buttons">
-      <a href="resume.pdf" class="btn">Download CV</a>
+      <a href="resume.pdf" class="btn" download="resume.pdf">Download CV</a>
       <a href="contact.html" class="btn-outline">Contact Me</a>
     </div>
   </div>
@@ -70,7 +72,7 @@
   </section>
   <!-- Footer -->
   <footer class="bg-light text-center py-3 mt-4 border-top">
-    <p class="mb-0">&copy; 2023 Daezy Portfolio. All rights reserved.</p>
+    <p class="mb-0">&copy; 2025 Luke Portfolio. All rights reserved.</p>
   </footer>
 </body>
 </html>
