--- a/project.html
+++ b/project.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,6 +13,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="project.css">
 </head>
+
 <body>
   <!-- Navbar -->
   <header class="navbar bg-light shadow-sm px-5 py-3 d-flex justify-content-between align-items-center">
@@ -26,7 +28,10 @@
   </header>
 
   <!-- Hero -->
-  <section class="hero">
+  <section class="hero"
+   style="height: 60vh; 
+         background: url(https://i.pinimg.com/1200x/e8/b3/d1/e8b3d1b5ccd14597ef8a24f6655603ab.jpg) center/cover;">
+    
     <div class="hero-content">
       <h1>My <span>Projects</span></h1>
       <p>Here are some of the works I have built using modern web technologies.</p>
@@ -85,7 +90,7 @@
 
   <!-- Footer -->
   <footer class="bg-light text-center py-3 mt-4 border-top">
-    <p class="mb-0">&copy; 2023 Daezy Portfolio. All rights reserved.</p>
+    <p class="mb-0">&copy; 2025 Daezy Portfolio. All rights reserved.</p>
   </footer>
 </body>
 </html>
