--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
          background: url(https://i.pinimg.com/1200x/e8/b3/d1/e8b3d1b5ccd14597ef8a24f6655603ab.jpg) center/cover;">
   <div class="hero-content">
     <h1>Hello, I'm <span>Luke</span></h1>
-    <p class="role">Frontend Developer</p>
+    <p class="role">Developer</p>
     <p class="desc">
       I create modern, responsive websites with clean UI/UX.
     </p>
     <div class="buttons">
-      <a href="resume.pdf" class="btn" download="resume.pdf">Download CV</a>
+      <a href="resume.pdf" class="btn" download="RESUME.pdf">Download CV</a>
       <a href="contact.html" class="btn-outline">Contact Me</a>
     </div>
   </div>
