--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       I create modern, responsive websites with clean UI/UX.
     </p>
     <div class="buttons">
-      <a href="resume.pdf" class="btn" download="RESUME.pdf">Download CV</a>
+      <a href="RESUME.pdf" class="btn" download="RESUME.pdf">Download CV</a>
       <a href="contact.html" class="btn-outline">Contact Me</a>
     </div>
   </div>
@@ -76,3 +76,4 @@
   </footer>
 </body>
 </html>
+
