--- a/index.html
+++ b/index.html
@@ -35,11 +35,12 @@
       I create modern, responsive websites with clean UI/UX.
     </p>
     <div class="buttons">
-      <a href="RESUME.pdf" class="btn" download="RESUME.pdf">Download CV</a>
+      <a href="https://raw.githubusercontent.com/eddolody-ui/Luke/main/resume.pdf" download class="btn">Download CV</a>
       <a href="contact.html" class="btn-outline">Contact Me</a>
     </div>
   </div>
 </section>
+
   <!-- About Section -->
   <section id="about" class="about glass-box">
     <h2>About Me</h2>
@@ -76,4 +77,3 @@
   </footer>
 </body>
 </html>
-
